--- a/wrapper.css
+++ b/wrapper.css
@@ -61,7 +61,7 @@ body {
 
     /* background image options */
     --background-image: on;
-    --background-image-url: url('https://s6.ezgif.com/tmp/ezgif-6e45d8098b897f.gif');
+    --background-image-url: url('https://media.discordapp.net/attachments/1325810406937071689/1378397262509506560/ezgif-6e45d8098b897f.gif?ex=683c73fc&is=683b227c&hm=87f8e5a252679a67a5c152e97c0ac219c63a5e255c49f0c5a81942a2465daff0&=&width=1920&height=1080');
 
     /* transparency/blur options */
     --transparency-tweaks: on;
