--- a/wrapper.css
+++ b/wrapper.css
@@ -57,7 +57,7 @@ body {
     --dms-background: off;
     --dms-background-image-url: url('');
     --dms-background-image-size: cover;
-    --dms-background-color: linear-gradient(70deg, var(--accent-3), var(--accent-4), var(--accent-5));
+    --dms-background-color: linear-gradient(70deg, var(--bg-3), var(--bg-4), var(--bg-5));
 
     /* background image options */
     --background-image: on;
